static/css/style.css
/* CSS variables*/
:root {
    
    --dark-purple: #440643;
    --purple: #730a71;
    --pink: #fde8fd;
    --barely-there-pink: #fef8fe;
    --barely-there-green: #f8fef8;
    --mid-green: #dffce0;
    --forest-green: #064407;
    --red-alert: #FF4433;
    --orange-alert: #b49e7ac9;
}


/* Base.html styling */
* {
    box-sizing: border-box;
}

 html, body {
   height: 100%;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
}
body {
    display: flex;
    flex-direction: column;
    background-color: var(--barely-there-pink);
}
main {
    display: flex;
    flex-grow : 1;
    align-items: center;
    width: 100%

}
#content-container {
    flex-grow: 1; 
    background-color: var(--barely-there-pink);
}
header {
    display: grid;
    grid-template-columns: auto auto;
    justify-items: right;
    align-items: center;
    max-width: 100vw;
    min-height: 15vh;
    background-color: var(--purple);
}
#header {
    display: flex;
    justify-self:left;
    flex-direction: row;
    justify-content: left;
    margin: 10px;  
}
h1, h2, h3, p {
    color: var(--dark-purple);
    margin: 5px;
}

#header h1 {
    margin: 10px;
    color: var(--mid-green);
}

.centertext {
    text-align:center;
    margin: 10px;
}
footer {
    background-color: var(--purple);
    display: grid;
    grid-template-columns: auto auto ;
}
footer p {
    color: var(--mid-green);
    margin-left:50px;
}
footer p a {
    color: var(--mid-green);
    margin-left: 5px;
}
i {
    font-size: 1.5em;
}

.alert-box{
    margin-left: 15px;
}

form label {
    color: var(--dark-purple);
}
.greentext {
    color: var(--forest-green);
}
/* turn around message when phone in portrait*/
.turn-message {
    display: flex;
    place-self: center;
    position: absolute;
    top: 15vh;
    left:50px;
    z-index: 3;
    width: 70%;
    height: 60%;
    background-color: var(--purple);
    align-items: center;
    text-align: center;
    font-size: 2em;
    padding: 10px;
    border-radius: 10px;
    margin: 20px;
    visibility: hidden;
    
}
.turn-message h1 {
    color: var(--mid-green);
}

/*End of base.html styling */

/* Home html styling */
#home {
    min-height: 80vh;
    background: url(../images/background-picture.webp);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    margin: 0px;
    display: flex;
    flex-direction: column;
}

#welcome {
    
    font-size: 3em;
    text-align: center;
    margin: 10px;
    color: var(--mid-green);

}
.logins {
    height: auto;
    position: absolute;
    right: 10px;
    bottom: 10px;
    display: flex;
    align-items: flex-end;  
}

.button {
    width: 100px;
    height: 50px;
    border-radius: 5px;
    background-color: var(--dark-purple);
    color: var(--barely-there-green);
    margin: 45px;
    display:flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
    text-align: center;  
}
.button:hover {
    background-color: var(--purple);
}
/*landing page styling */
.buttons-page {
    display:grid;
    grid-template-columns: auto auto auto auto auto;
    justify-content: space-evenly;
}

/* End of home.html styling */

.list-container {
    display:grid;
    align-items: center;
    justify-content: center;
    grid-template-columns: auto auto;
    margin: 20px;
}
.home {
    position: absolute;
    top: 20vh;
   
}
    
/* tables styling */
table {
    color: var(--forest-green);
}
td, th {
    width: 100px;
    text-align: left;
}
tr {
    margin-bottom: 5px;
}
.longer-column {
    width: 210px;
}
.medium-column {
    width: 150px;
}
td a:link, td a:visited {
    color: var(--purple);
    text-decoration: underline;
}
/* End of tables styling */

/* Authentication pages styling */
.pagecontent {
    display:flex;
    
    justify-content: center;
    margin: 20px;
}

.authpage {
    display:flex;
    flex-direction: column;
    
    text-align: center;
}
#outform {
    justify-self: center;
}
#signout {
    justify-self: center;
}

/* Forms styling */
.form-container {
    display:flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    margin: 20px;
    
}  
.reducesize div {
    display: flex;
    flex-direction: column;
    margin: 10px;
}
.reducesize {
    display: flex;
    width:70%;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}  
.current {
    color: var(--purple);
}
.pagination {
    margin: 10px;
}


.formcenter {
    display: flex;
    justify-content: center;
}
.formleft {
    display: flex;
    flex-direction: column;
    justify-content: left;
}
.helptext {
    color: var(--forest-green);
}
form {
    display: flex;
    width:70%;
    justify-content: center;
    flex-direction: column;


}
form div {
    width: 70%;
    align-self: center;
}
form label {
    text-align: left;
    font-size: 1.2em;
}
form  input, form select {
    border-color: var(--forest-green);
    border-width: medium;
    border-radius: 5px;
    margin: 10px;
    height: 30px;
    color: var(--purple);
    background-color:transparent;

}

textarea {
    height: 75px;

}
.box {
    padding: 10px;
    border-style: solid;
    border-width: 2px;
    border-color: var(--forest-green);
    border-radius: 5px;
     
}
.inlinebutton {
    display: grid;
    grid-template-columns: auto auto;
}
.form-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 10px
}
.form-field {
    display: flex;
    flex-direction: column;
}



/* Code written to  override the browser's blue color in dropdown menus. With AI */
/* 1. OVERALL MAIN CONTAINER */
.choices:has(.choicebox) {
    width: 300px !important;          
    margin-bottom: 15px;
    height: 30px !important;
    border: 2px solid var(--forest-green) !important; 
    border-radius: 6px !important;        
    background-color: var(--barely-there-pink) !important; 
    box-sizing: border-box !important;
    position: relative;
}
/* 2. INNER CONTAINER */
.choices:has(.choicebox) .choices__inner {
    background-color: transparent !important; 
    border: none !important;              
    height: 100% !important;
    min-height: 100% !important;          
    display: flex !important;
    align-items: center !important; /* Forces perfect vertical centering */
    justify-content: flex-start !important;
    padding: 0 0 0 10px !important; /* Left indent spacing */
    overflow: visible !important;
    position: relative !important;
    box-sizing: border-box !important;
}
/* 3. FORCE CLOSED TEXT VISIBILITY & PERFECTLY CENTERTEXT */
.choices:has(.choicebox) .choices__list--single {
    padding: 0 !important;
    margin: 0 !important;
    width: calc(100% - 30px) !important; /* Leaves room on the right side for a dropdown arrow */
    position: relative !important;
    display: flex !important;
    align-items: center !important;
    transform: translateY(-1.5px) !important;
    opacity: 1 !important;
    visibility: visible !important;
    line-height: normal !important; /* Restores standard bounding box behavior */
    height: auto !important;
    box-sizing: border-box !important;
}
.choices:has(.choicebox) .choices__list--single .choices__item,
.choices:has(.choicebox) .choices__list--single .choices__item.is-placeholder,
.choices:has(.choicebox) .choices__list--single .choices__placeholder,
.choices:has(.choicebox) [data-item][data-type="select-one"] {
    color: var(--purple) !important;            
    font-size: 16px !important;           
    font-weight: normal !important;
    line-height: 1 !important; 
    padding: 0 !important;
    margin: 0 !important;
    opacity: 1 !important;
    visibility: visible !important;
    display: inline-block !important; /* Keeps text inline within the flex layout */
    background: transparent !important;
    -webkit-text-fill-color: var(--purple) !important;
}
/* 4. DROPDOWN LIST MENU OPTIONS */
.choices:has(.choicebox) .choices__list--dropdown {
    background-color: var(--barely-there-pink) !important;
    border: 2px solid var(--forest-green) !important;
    border-radius: 6px !important;        
    margin-top: 5px !important;           
    left: -2px !important; 
    width: 300px !important;
    box-sizing: border-box !important;   
    z-index: 999 !important;
}
/* Keep dropdown menu item text separate from closed box text */
.choices:has(.choicebox) .choices__list--dropdown .choices__item {
    color: var(-purple) !important; 
    -webkit-text-fill-color: var(--purple) !important;
    font-size: 14px;
    font-weight: normal;
}
/* Hover/Highlight color states */
.choices:has(.choicebox) .choices__list--dropdown .choices__item--selectable.is-highlighted {
    background-color: var(--pink) !important; 
    color: var(--purple) !important;            
    -webkit-text-fill-color: var(--purple) !important;
}
/* 5. STOP INPUT BOX FROM OVERWRITING OR BLOCKING THE CLOSED TEXT */
.choices:has(.choicebox) input.choices__input {
    position: absolute !important;
    opacity: 0 !important;
    width: 0 !important;
    height: 0 !important;
    padding: 0 !important;
    margin: 0 !important;
    pointer-events: none !important;
}

/* End of AI code */

/* End of forms stylying */

/* Timetables info */
.info {
    position: relative;
    margin:20px;
}
.timetablea, .timetableb {
    position: absolute;
    top: 15vh;
    right: 10px;
    z-index: 3;
    background-color: var(--pink);
    padding: 5px;
    border-radius: 5px;
}
.timetableav, .timetablebv {
    position: absolute;
    bottom: 10vh;
    right: 10px;
    z-index: 3;
    background-color: var(--pink);
    padding: 5px;
    border-radius: 5px;
}

.timetable-top {
    display: grid;
    grid-template-columns: auto auto;
}
.hide-button, .info-button {
    width: 50px;
    height: 30px;
    border-radius: 5px;
    background-color: var(--dark-purple);
    color: var(--barely-there-green);
}


/* Whee Do I put this? */
.textcenter {
    text-align:center;
}

.vertical {
    visibility: hidden;
}
.hidden {
    visibility: hidden !important;
}
/* Media queries.*/
@media screen and (max-width: 992px) {
    .buttons-page{
        grid-template-columns: auto auto auto;
        
    }
    .button {
        margin: 10px;
    }

}
@media screen and (max-width:600px) {
    header {
        display:flex;
        flex-direction: column;
        align-items:end;
    }
    #header h1 {
        font-size: 1.8em;
    }
    .logins {
        
        justify-content: center;
        align-items: end;
        margin-top: 20px;
        margin-bottom: 70px;
    }
    .login {
        position: fixed;
        z-index: 2;
    }
    
    .login .button {
        margin:0px;
        margin-right:10px;   
    }
    
    .buttons-page{
        grid-template-columns: auto auto;
        
    }
    .button {
        margin: 30px;
    }
    footer p {
        margin-left: 10px;
    }
    #follow{
        display: none;
    }
    .form-container{
        flex-direction: column;
    }
    .list-container {
        display: flex;
        flex-direction: column;
    }
    .reducesize {
        width: 90%;
    }
    form {
        width: 100%;
    }
    .turn-message {
        visibility: visible;
    }
    .home {
        position: static;
    }
    .horizontal {
        visibility :hidden;
    }
    .vertical {
        visibility: visible;
    }
    
}

